--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,3 +1,4 @@
+/* Base Styles */
 .about {
   display: flex;
   flex-direction: column;
@@ -5,6 +6,12 @@
   justify-content: center;
   gap: 2rem;
   margin: 4rem 6rem;
+  animation: fadeIn 2s ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
 
 .about-title {
@@ -19,8 +26,8 @@
 }
 
 .about-title img {
-  width: 5rem;
-  height: 5rem;
+  width: 170px;
+  height: 170px;
   position: absolute;
   transform: rotate(45deg);
   bottom: -30%;
@@ -29,8 +36,8 @@
 }
 
 .about-section {
-    display: flex;
-    gap: 2rem;
+  display: flex;
+  gap: 2rem;
 }
 
 .about-left img {
@@ -38,6 +45,13 @@
   max-width: 300px;
   height: auto;
   border-radius: 10px;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+  40% { transform: translateY(-20px); }
+  60% { transform: translateY(-10px); }
 }
 
 .about-right {
@@ -104,6 +118,7 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  transition: transform 0.3s, color 0.3s;
 }
 
 .about-achievement p {
@@ -116,40 +131,49 @@
   transition: 0.3s;
 }
 
-.about-achievement:hover {
-  transform: scale(1.12);
-  transition: 0.5s;
+.about-achievement:hover h1 {
+  transform: scale(1.1);
+  transition: 0.3s;
+  color: #df8908;
 }
 
 @media (max-width: 768px) {
-  .about{
+  .about {
     gap: 80px;
     margin: 50px 70px;
   }
-  .about-title h1{
+  
+  .about-title h1 {
     font-size: 3rem;
   }
-  .about-section{
+  
+  .about-section {
     flex-direction: column;
   }
-  .about-left{
+  
+  .about-left {
     align-items: center;
   }
+  
   .about-skills {
     flex-direction: column;
   }
+  
   .about-right {
     gap: 2rem;
   }
+  
   .about-skill {
     flex-direction: row;
     gap: 1rem;
   }
+  
   .about-achievements {
     flex-direction: row;
     gap: 2rem;
   }
-  .about-achievements h1{
+  
+  .about-achievements h1 {
     font-size: 3rem;
   }
 }
